src/objects/Page__c.object
<CustomObject>
    <description>Main article page, parent to any Sections</description>
    <fields>
        <fullName>Active_Menu__c</fullName>
        <label>Active Menu</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bottom_Link_List__c</fullName>
        <description>List of links that will appear at the bottom of the page / article</description>
        <label>Bottom Link List</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Date_Published__c</fullName>
        <label>Date Published</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsPublished__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsPublished</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Page__c</fullName>
        <label>Parent Page</label>
        <referenceTo>Page__c</referenceTo>
        <relationshipLabel>Pages</relationshipLabel>
        <relationshipName>Pages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rank__c</fullName>
        <label>Rank</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SEO_Description__c</fullName>
        <label>SEO Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SEO_Keywords__c</fullName>
        <label>SEO Keywords</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show_Menu__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Menu</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Title of this page / article</description>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_text__c</fullName>
        <description>Unique text value for this page / article</description>
        <label>Unique Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Use_Breadcrumb__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Breadcrumb</label>
        <type>Checkbox</type>
    </fields>
    <label>Page</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Unique_text__c</columns>
        <columns>Parent_Page__c</columns>
        <columns>IsPublished__c</columns>
        <columns>Date_Published__c</columns>
        <columns>Active_Menu__c</columns>
        <columns>Use_Breadcrumb__c</columns>
        <columns>Show_Menu__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Page Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>